--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "bootstrap": "^5.0.1",
     "express": "^4.17.1",
+    "heroku": "^7.54.1",
     "nodemon": "^2.0.7"
   },
   "devDependencies": {},
